--- a/ms.bib
+++ b/ms.bib
@@ -1,610 +1,676 @@
 @article{ai2020correlation,
 	author = {Ai, Tao and Yang, Zhenlu and Hou, Hongyan and Zhan, Chenao and Chen, Chong and Lv, Wenzhi and Tao, Qian and Sun, Ziyong and Xia, Liming},
-	title = {Correlation of Chest {CT} and {RT\}-\{PCR} Testing for Coronavirus Disease 2019 \{(COVID\}-19) in China: {A} Report of 1014 Cases},
-	journal = {Radiology},
-	pages = {E32--E40},
-	year = {2020},
-	publisher = {Radiological Society of North America (RSNA)},
 	doi = {10.1148/radiol.2020200642},
+	issn = {0033-8419, 1527-1315},
+	journal = {Radiology},
 	number = {2},
+	pages = {E32--E40},
+	publisher = {Radiological Society of North America (RSNA)},
 	source = {Crossref},
+	title = {Correlation of Chest {CT} and {RT\}-\{PCR} Testing for Coronavirus Disease 2019 \{(COVID\}-19) in China: {A} Report of 1014 Cases},
 	url = {https://doi.org/10.1148/radiol.2020200642},
 	volume = {296},
-	issn = {0033-8419, 1527-1315},
+	year = {2020},
 	month = aug,
 }
 
 @inproceedings{chaurasia2017linknet,
 	author = {Chaurasia, Abhishek and Culurciello, Eugenio},
-	title = {{LinkNet:} {Exploiting} encoder representations for efficient semantic segmentation},
 	booktitle = {2017 IEEE Visual Communications and Image Processing (VCIP)},
-	pages = {1--4},
-	year = {2017},
-	organization = {IEEE},
 	doi = {10.1109/vcip.2017.8305148},
-	source = {Crossref},
-	url = {https://doi.org/10.1109/vcip.2017.8305148},
+	organization = {IEEE},
+	pages = {1--4},
 	publisher = {IEEE},
+	source = {Crossref},
+	title = {{LinkNet:} {Exploiting} encoder representations for efficient semantic segmentation},
+	url = {https://doi.org/10.1109/vcip.2017.8305148},
+	year = {2017},
 	month = dec,
 }
 
 @inproceedings{chen2017dual,
 	author = {Chen, Yunpeng and Li, Jianan and Xiao, Huaxin and Jin, Xiaojie and Yan, Shuicheng and Feng, Jiashi},
-	title = {Dual path networks},
-	booktitle = {Advances in neural information processing systems},
+	editor = {Guyon, Isabelle and von Luxburg, Ulrike and Bengio, Samy and Wallach, Hanna M. and Fergus, Rob and Vishwanathan, S. V. N. and Garnett, Roman},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/nips/ChenLXJYF17.bib},
+	booktitle = {Advances in Neural Information Processing Systems 30: Annual Conference on Neural Information Processing Systems 2017, December 4-9, 2017, Long Beach, CA, USA},
 	pages = {4467--4475},
+	timestamp = {Thu, 21 Jan 2021 00:00:00 +0100},
+	title = {Dual Path Networks},
+	url = {https://proceedings.neurips.cc/paper/2017/hash/f7e0b956540676a129760a3eae309294-Abstract.html},
 	year = {2017},
 }
 
 @article{chen2020residual,
 	author = {Chen, Xiaocong and Yao, Lina and Zhang, Yu},
+	journal = {ArXiv preprint},
 	title = {Residual Attention U-Net for Automated Multi-Class Segmentation of \{COVID\}-19 Chest {CT} Images},
-	journal = {arXiv preprint arXiv:2004.05645},
+	url = {https://arxiv.org/abs/2004.05645},
+	volume = {abs/2004.05645},
 	year = {2020},
 }
 
 @inproceedings{chollet2017xception,
 	author = {Chollet, Francois},
-	title = {Xception: {Deep} Learning with Depthwise Separable Convolutions},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/cvpr/Chollet17.bib},
 	booktitle = {2017 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
-	pages = {1251--1258},
-	year = {2017},
 	doi = {10.1109/cvpr.2017.195},
-	source = {Crossref},
-	url = {https://doi.org/10.1109/cvpr.2017.195},
+	pages = {1800--1807},
 	publisher = {IEEE},
+	timestamp = {Tue, 14 Nov 2017 00:00:00 +0100},
+	title = {Xception: {Deep} Learning with Depthwise Separable Convolutions},
+	url = {https://doi.org/10.1109/cvpr.2017.195},
+	year = {2017},
+	source = {Crossref},
 	month = jul,
 }
 
 @inproceedings{deng2009imagenet,
-	author = {Deng, Jia and Dong, Wei and Socher, Richard and Li, Li-Jia and Li, Kai and Fei-Fei, Li},
-	title = {{ImageNet:} {A} large-scale hierarchical image database},
+	author = {Deng, Jia and Dong, Wei and Socher, Richard and Li, Li-Jia and Li, Kai and Li, Fei-Fei},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/cvpr/DengDSLL009.bib},
 	booktitle = {2009 IEEE Conference on Computer Vision and Pattern Recognition},
-	pages = {248--255},
-	year = {2009},
-	organization = {Ieee},
 	doi = {10.1109/cvpr.2009.5206848},
-	source = {Crossref},
-	url = {https://doi.org/10.1109/cvpr.2009.5206848},
+	pages = {248--255},
 	publisher = {IEEE},
+	timestamp = {Fri, 27 Mar 2020 00:00:00 +0100},
+	title = {{ImageNet:} {A} large-scale hierarchical image database},
+	url = {https://doi.org/10.1109/cvpr.2009.5206848},
+	year = {2009},
+	source = {Crossref},
 	month = jun,
 }
 
 @incollection{drozdzal2016importance,
 	author = {Drozdzal, Michal and Vorontsov, Eugene and Chartrand, Gabriel and Kadoury, Samuel and Pal, Chris},
-	title = {The Importance of Skip Connections in Biomedical Image Segmentation},
 	booktitle = {Deep Learning and Data Labeling for Medical Applications},
-	pages = {179--187},
-	year = {2016},
-	publisher = {Springer International Publishing},
 	doi = {10.1007/978-3-319-46976-8_19},
-	source = {Crossref},
-	url = {https://doi.org/10.1007/978-3-319-46976-8_19},
-	issn = {0302-9743, 1611-3349},
 	isbn = {9783319469751, 9783319469768},
+	issn = {0302-9743, 1611-3349},
+	pages = {179--187},
+	publisher = {Springer International Publishing},
+	source = {Crossref},
+	title = {The Importance of Skip Connections in Biomedical Image Segmentation},
+	url = {https://doi.org/10.1007/978-3-319-46976-8_19},
+	year = {2016},
 }
 
 @article{fan2020inf,
 	author = {Fan, Deng-Ping and Zhou, Tao and Ji, Ge-Peng and Zhou, Yi and Chen, Geng and Fu, Huazhu and Shen, Jianbing and Shao, Ling},
-	title = {Inf-Net: {Automatic} \{COVID\}-19 Lung Infection Segmentation From {CT} Images},
-	journal = {IEEE Trans. Med. Imaging},
-	year = {2020},
-	publisher = {Institute of Electrical and Electronics Engineers (IEEE)},
 	doi = {10.1109/tmi.2020.2996645},
+	issn = {0278-0062, 1558-254X},
+	journal = {IEEE Trans. Med. Imaging},
 	number = {8},
+	pages = {2626--2637},
+	publisher = {Institute of Electrical and Electronics Engineers (IEEE)},
 	source = {Crossref},
+	title = {Inf-Net: {Automatic} \{COVID\}-19 Lung Infection Segmentation From {CT} Images},
 	url = {https://doi.org/10.1109/tmi.2020.2996645},
 	volume = {39},
-	issn = {0278-0062, 1558-254X},
-	pages = {2626--2637},
+	year = {2020},
 	month = aug,
 }
 
 @inproceedings{harrison2017progressive,
 	author = {Harrison, Adam P and Xu, Ziyue and George, Kevin and Lu, Le and Summers, Ronald M and Mollura, Daniel J},
-	title = {Progressive and multi-path holistically nested neural networks for pathological lung segmentation from {CT} images},
 	booktitle = {International conference on medical image computing and computer-assisted intervention},
-	pages = {621--629},
-	year = {2017},
 	organization = {Springer},
+	pages = {621--629},
+	title = {Progressive and multi-path holistically nested neural networks for pathological lung segmentation from {CT} images},
+	year = {2017},
 }
 
 @inproceedings{he2016deep,
 	author = {He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
-	title = {Deep Residual Learning for Image Recognition},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/cvpr/HeZRS16.bib},
 	booktitle = {2016 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
-	pages = {770--778},
-	year = {2016},
 	doi = {10.1109/cvpr.2016.90},
-	source = {Crossref},
-	url = {https://doi.org/10.1109/cvpr.2016.90},
+	pages = {770--778},
 	publisher = {IEEE},
+	timestamp = {Wed, 17 Apr 2019 01:00:00 +0200},
+	title = {Deep Residual Learning for Image Recognition},
+	url = {https://doi.org/10.1109/cvpr.2016.90},
+	year = {2016},
+	source = {Crossref},
 	month = jun,
 }
 
 @article{he2020benchmarking,
 	author = {He, Xin and Wang, Shihao and Chu, Xiaowen and Shi, Shaohuai and Tang, Jiangping and Liu, Xin and Yan, Chenggang and Zhang, Jiyong and Ding, Guiguang},
-	title = {Automated Model Design and Benchmarking of Deep Learning Models for \{COVID\}-19 Detection with Chest {CT} Scans},
-	journal = {Proceedings of the AAAI Conference on Artificial Intelligence},
-	year = {2021},
-	publisher = {Association for the Advancement of Artificial Intelligence (AAAI)},
 	doi = {10.1609/aaai.v35i6.16614},
+	issn = {2374-3468, 2159-5399},
+	journal = {Proceedings of the AAAI Conference on Artificial Intelligence},
 	number = {6},
+	pages = {4821--4829},
+	publisher = {Association for the Advancement of Artificial Intelligence (AAAI)},
 	source = {Crossref},
+	title = {Automated Model Design and Benchmarking of Deep Learning Models for \{COVID\}-19 Detection with Chest {CT} Scans},
 	url = {https://doi.org/10.1609/aaai.v35i6.16614},
 	volume = {35},
-	issn = {2374-3468, 2159-5399},
-	pages = {4821--4829},
+	year = {2021},
 	month = may,
 }
 
 @article{hesamian2019deep,
 	author = {Hesamian, Mohammad Hesam and Jia, Wenjing and He, Xiangjian and Kennedy, Paul},
-	title = {Deep Learning Techniques for Medical Image Segmentation: {Achievements} and Challenges},
+	doi = {10.1007/s10278-019-00227-x},
+	issn = {0897-1889, 1618-727X},
 	journal = {J. Digit. Imaging},
-	volume = {32},
 	number = {4},
 	pages = {582--596},
-	year = {2019},
 	publisher = {Springer Science and Business Media LLC},
-	doi = {10.1007/s10278-019-00227-x},
 	source = {Crossref},
+	title = {Deep Learning Techniques for Medical Image Segmentation: {Achievements} and Challenges},
 	url = {https://doi.org/10.1007/s10278-019-00227-x},
-	issn = {0897-1889, 1618-727X},
+	volume = {32},
+	year = {2019},
 	month = may,
 }
 
 @article{hofmanninger2020automatic,
 	author = {Hofmanninger, Johannes and Prayer, Florian and Pan, Jeanny and Rohrich, Sebastian and Prosch, Helmut and Langs, Georg},
+	journal = {ArXiv preprint},
 	title = {Automatic lung segmentation in routine imaging is a data diversity problem, not a methodology problem},
-	journal = {arXiv preprint arXiv:2001.11767},
+	url = {https://arxiv.org/abs/2001.11767},
+	volume = {abs/2001.11767},
 	year = {2020},
 }
 
 @article{howard2017mobilenets,
 	author = {Howard, Andrew G and Zhu, Menglong and Chen, Bo and Kalenichenko, Dmitry and Wang, Weijun and Weyand, Tobias and Andreetto, Marco and Adam, Hartwig},
+	journal = {ArXiv preprint},
 	title = {Mobilenets: {Efficient} convolutional neural networks for mobile vision applications},
-	journal = {arXiv preprint arXiv:1704.04861},
+	url = {https://arxiv.org/abs/1704.04861},
+	volume = {abs/1704.04861},
 	year = {2017},
 }
 
 @article{hu2001automatic,
 	author = {Hu, S. and Hoffman, E.A. and Reinhardt, J.M.},
-	title = {Automatic lung segmentation for accurate quantitation of volumetric X-ray {CT} images},
+	doi = {10.1109/42.929615},
+	issn = {0278-0062},
 	journal = {IEEE Trans. Med. Imaging},
-	volume = {20},
 	number = {6},
 	pages = {490--498},
-	year = {2001},
 	publisher = {Institute of Electrical and Electronics Engineers (IEEE)},
-	doi = {10.1109/42.929615},
 	source = {Crossref},
+	title = {Automatic lung segmentation for accurate quantitation of volumetric X-ray {CT} images},
 	url = {https://doi.org/10.1109/42.929615},
-	issn = {0278-0062},
+	volume = {20},
+	year = {2001},
 	month = jun,
 }
 
 @inproceedings{hu2019comparison,
 	author = {Hu, Junxing and Li, Ling and Lin, Yijun and Wu, Fengge and Zhao, Junsuo},
-	title = {A Comparison and Strategy of Semantic Segmentation on Remote Sensing Images},
 	booktitle = {The International Conference on Natural Computation, Fuzzy Systems and Knowledge Discovery},
-	pages = {21--29},
-	year = {2019},
 	organization = {Springer},
+	pages = {21--29},
+	title = {A Comparison and Strategy of Semantic Segmentation on Remote Sensing Images},
+	year = {2019},
 }
 
 @inproceedings{huang2017densely,
 	author = {Huang, Gao and Liu, Zhuang and Van Der Maaten, Laurens and Weinberger, Kilian Q.},
-	title = {Densely Connected Convolutional Networks},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/cvpr/HuangLMW17.bib},
 	booktitle = {2017 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
-	pages = {4700--4708},
-	year = {2017},
 	doi = {10.1109/cvpr.2017.243},
-	source = {Crossref},
-	url = {https://doi.org/10.1109/cvpr.2017.243},
+	pages = {2261--2269},
 	publisher = {IEEE},
+	timestamp = {Mon, 10 Sep 2018 01:00:00 +0200},
+	title = {Densely Connected Convolutional Networks},
+	url = {https://doi.org/10.1109/cvpr.2017.243},
+	year = {2017},
+	source = {Crossref},
 	month = jul,
 }
 
 @article{jin2020ai,
 	author = {Wang, Bo and Jin, Shuo and Yan, Qingsen and Xu, Haibo and Luo, Chuan and Wei, Lai and Zhao, Wei and Hou, Xuexue and Ma, Wenshuo and Xu, Zhengqing and Zheng, Zhuozhao and Sun, Wenbo and Lan, Lan and Zhang, Wei and Mu, Xiangdong and Shi, Chenxi and Wang, Zhongxiao and Lee, Jihae and Jin, Zijian and Lin, Minggui and Jin, Hongbo and Zhang, Liang and Guo, Jun and Zhao, Benqi and Ren, Zhizhong and Wang, Shuhao and Xu, Wei and Wang, Xinghuan and Wang, Jianming and You, Zheng and Dong, Jiahong},
-	title = {\{AI\}-assisted {CT} imaging analysis for \{COVID\}-19 screening: {Building} and deploying a medical {AI} system},
-	journal = {Appl. Soft Comput.},
-	year = {2021},
-	publisher = {Elsevier BV},
 	doi = {10.1016/j.asoc.2020.106897},
+	issn = {1568-4946},
+	journal = {Appl. Soft Comput.},
+	pages = {106897},
+	publisher = {Elsevier BV},
 	source = {Crossref},
+	title = {\{AI\}-assisted {CT} imaging analysis for \{COVID\}-19 screening: {Building} and deploying a medical {AI} system},
 	url = {https://doi.org/10.1016/j.asoc.2020.106897},
 	volume = {98},
-	issn = {1568-4946},
-	pages = {106897},
+	year = {2021},
 	month = jan,
 }
 
 @article{kalpathy2016comparison,
 	author = {Kalpathy-Cramer, Jayashree and Zhao, Binsheng and Goldgof, Dmitry and Gu, Yuhua and Wang, Xingwei and Yang, Hao and Tan, Yongqiang and Gillies, Robert and Napel, Sandy},
-	title = {A Comparison of Lung Nodule Segmentation Algorithms: {Methods} and Results from a Multi-institutional Study},
+	doi = {10.1007/s10278-016-9859-z},
+	issn = {0897-1889, 1618-727X},
 	journal = {J. Digit. Imaging},
-	volume = {29},
 	number = {4},
 	pages = {476--487},
-	year = {2016},
 	publisher = {Springer Science and Business Media LLC},
-	doi = {10.1007/s10278-016-9859-z},
 	source = {Crossref},
+	title = {A Comparison of Lung Nodule Segmentation Algorithms: {Methods} and Results from a Multi-institutional Study},
 	url = {https://doi.org/10.1007/s10278-016-9859-z},
-	issn = {0897-1889, 1618-727X},
+	volume = {29},
+	year = {2016},
 	month = feb,
 }
 
 @article{keshani2013lung,
 	author = {Keshani, Mohsen and Azimifar, Zohreh and Tajeripour, Farshad and Boostani, Reza},
-	title = {Lung nodule segmentation and recognition using {SVM} classifier and active contour modeling: {A} complete intelligent system},
+	doi = {10.1016/j.compbiomed.2012.12.004},
+	issn = {0010-4825},
 	journal = {Comput. Biol. Med.},
-	volume = {43},
 	number = {4},
 	pages = {287--300},
-	year = {2013},
 	publisher = {Elsevier BV},
-	doi = {10.1016/j.compbiomed.2012.12.004},
 	source = {Crossref},
+	title = {Lung nodule segmentation and recognition using {SVM} classifier and active contour modeling: {A} complete intelligent system},
 	url = {https://doi.org/10.1016/j.compbiomed.2012.12.004},
-	issn = {0010-4825},
+	volume = {43},
+	year = {2013},
 	month = may,
 }
 
 @inproceedings{king2018comparison,
 	author = {King, Andrew and Bhandarkar, Suchendra M. and Hopkinson, Brian M.},
-	title = {A Comparison of Deep Learning Methods for Semantic Segmentation of Coral Reef Survey Images},
 	booktitle = {2018 IEEE/CVF Conference on Computer Vision and Pattern Recognition Workshops (CVPRW)},
-	pages = {1394--1402},
-	year = {2018},
 	doi = {10.1109/cvprw.2018.00188},
-	source = {Crossref},
-	url = {https://doi.org/10.1109/cvprw.2018.00188},
+	pages = {1394--1402},
 	publisher = {IEEE},
+	source = {Crossref},
+	title = {A Comparison of Deep Learning Methods for Semantic Segmentation of Coral Reef Survey Images},
+	url = {https://doi.org/10.1109/cvprw.2018.00188},
+	year = {2018},
 	month = jun,
 }
 
-@article{kingma2014adam,
-	author = {Kingma, Diederik P and Ba, Jimmy},
-	title = {Adam: {A} method for stochastic optimization},
-	journal = {arXiv preprint arXiv:1412.6980},
-	year = {2014},
+@inproceedings{kingma2014adam,
+	author = {Kingma, Diederik P. and Ba, Jimmy},
+	editor = {Bengio, Yoshua and LeCun, Yann},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/journals/corr/KingmaB14.bib},
+	booktitle = {3rd International Conference on Learning Representations, ICLR 2015, San Diego, CA, USA, May 7-9, 2015, Conference Track Proceedings},
+	timestamp = {Thu, 25 Jul 2019 01:00:00 +0200},
+	title = {Adam: {A} Method for Stochastic Optimization},
+	url = {http://arxiv.org/abs/1412.6980},
+	year = {2015},
 }
 
-@article{lecun2015deep,
-	author = {LeCun, Yann and Bengio, Yoshua and Hinton, Geoffrey},
+@inproceedings{lecun2015deep,
+	author = {Salakhutdinov, Ruslan},
+	editor = {Macskassy, Sofus A. and Perlich, Claudia and Leskovec, Jure and Wang, Wei and Ghani, Rayid},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/kdd/Salakhutdinov14.bib},
+	booktitle = {Proceedings of the 20th ACM SIGKDD international conference on Knowledge discovery and data mining},
+	doi = {10.1145/2623330.2630809},
+	pages = {1973},
+	publisher = {ACM},
+	timestamp = {Tue, 06 Nov 2018 00:00:00 +0100},
 	title = {Deep learning},
-	journal = {Nature},
-	volume = {521},
-	number = {7553},
-	pages = {436--444},
-	year = {2015},
-	publisher = {Springer Science and Business Media LLC},
-	doi = {10.1038/nature14539},
+	url = {https://doi.org/10.1145/2623330.2630809},
+	year = {2014},
 	source = {Crossref},
-	url = {https://doi.org/10.1038/nature14539},
-	issn = {0028-0836, 1476-4687},
-	month = may,
+	month = aug,
 }
 
 @inproceedings{lin2017feature,
 	author = {Lin, Tsung-Yi and Dollar, Piotr and Girshick, Ross and He, Kaiming and Hariharan, Bharath and Belongie, Serge},
-	title = {Feature Pyramid Networks for Object Detection},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/cvpr/LinDGHHB17.bib},
 	booktitle = {2017 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
-	pages = {2117--2125},
-	year = {2017},
 	doi = {10.1109/cvpr.2017.106},
-	source = {Crossref},
-	url = {https://doi.org/10.1109/cvpr.2017.106},
+	pages = {936--944},
 	publisher = {IEEE},
+	timestamp = {Tue, 14 Nov 2017 00:00:00 +0100},
+	title = {Feature Pyramid Networks for Object Detection},
+	url = {https://doi.org/10.1109/cvpr.2017.106},
+	year = {2017},
+	source = {Crossref},
 	month = jul,
 }
 
 @inproceedings{liu2018comparison,
 	author = {Liu, Qinghui and Salberg, Arnt-Borre and Jenssen, Robert},
-	title = {A Comparison of Deep Learning Architectures for Semantic Mapping of Very High Resolution Images},
 	booktitle = {IGARSS 2018 - 2018 IEEE International Geoscience and Remote Sensing Symposium},
-	pages = {6943--6946},
-	year = {2018},
-	organization = {IEEE},
 	doi = {10.1109/igarss.2018.8518533},
-	source = {Crossref},
-	url = {https://doi.org/10.1109/igarss.2018.8518533},
+	organization = {IEEE},
+	pages = {6943--6946},
 	publisher = {IEEE},
+	source = {Crossref},
+	title = {A Comparison of Deep Learning Architectures for Semantic Mapping of Very High Resolution Images},
+	url = {https://doi.org/10.1109/igarss.2018.8518533},
+	year = {2018},
 	month = jul,
 }
 
 @article{ma2020towards,
 	author = {Ma, Jun and Wang, Yixin and An, Xingle and Ge, Cheng and Yu, Ziqi and Chen, Jianan and Zhu, Qiongjie and Dong, Guoqiang and He, Jian and He, Zhiqiang and Cao, Tianjia and Zhu, Yuntao and Nie, Ziwei and Yang, Xiaoping},
-	title = {Toward data-efficient learning: {A} benchmark for {COVID-19} {CT} lung and infection segmentation},
-	journal = {Med. Phys.},
-	year = {2021},
 	doi = {10.1002/mp.14676},
+	issn = {0094-2405, 2473-4209},
+	journal = {Med. Phys.},
 	number = {3},
+	pages = {1197--1210},
+	publisher = {Wiley},
 	source = {Crossref},
+	title = {Toward data-efficient learning: {A} benchmark for {COVID-19} {CT} lung and infection segmentation},
 	url = {https://doi.org/10.1002/mp.14676},
 	volume = {48},
-	publisher = {Wiley},
-	issn = {0094-2405, 2473-4209},
-	pages = {1197--1210},
+	year = {2021},
 	month = feb,
 }
 
 @article{manikandan2016lung,
 	author = {Manikandan, T. and Bharathi, N.},
-	title = {Lung Cancer Detection Using Fuzzy Auto-Seed Cluster Means Morphological Segmentation and {SVM} Classifier},
+	doi = {10.1007/s10916-016-0539-9},
+	issn = {0148-5598, 1573-689X},
 	journal = {J. Med. Syst.},
-	volume = {40},
 	number = {7},
 	pages = {181},
-	year = {2016},
 	publisher = {Springer Science and Business Media LLC},
-	doi = {10.1007/s10916-016-0539-9},
 	source = {Crossref},
+	title = {Lung Cancer Detection Using Fuzzy Auto-Seed Cluster Means Morphological Segmentation and {SVM} Classifier},
 	url = {https://doi.org/10.1007/s10916-016-0539-9},
-	issn = {0148-5598, 1573-689X},
+	volume = {40},
+	year = {2016},
 	month = jun,
 }
 
 @article{minaee2020image,
 	author = {Minaee, Shervin and Boykov, Yuri Y. and Porikli, Fatih and Plaza, Antonio J and Kehtarnavaz, Nasser and Terzopoulos, Demetri},
-	title = {Image Segmentation Using Deep Learning: {A} Survey},
-	journal = {IEEE Trans. Pattern Anal. Mach. Intell.},
-	year = {2021},
 	doi = {10.1109/tpami.2021.3059968},
-	source = {Crossref},
-	url = {https://doi.org/10.1109/tpami.2021.3059968},
-	publisher = {Institute of Electrical and Electronics Engineers (IEEE)},
 	issn = {0162-8828, 2160-9292, 1939-3539},
+	journal = {IEEE Trans. Pattern Anal. Mach. Intell.},
 	pages = {1--1},
+	publisher = {Institute of Electrical and Electronics Engineers (IEEE)},
+	source = {Crossref},
+	title = {Image Segmentation Using Deep Learning: {A} Survey},
+	url = {https://doi.org/10.1109/tpami.2021.3059968},
+	year = {2021},
 }
 
 @article{ng2020imaging,
 	author = {Ng, Ming-Yen and Lee, Elaine Y. P. and Yang, Jin and Yang, Fangfang and Li, Xia and Wang, Hongxia and Lui, Macy Mei-sze and Lo, Christine Shing-Yen and Leung, Barry and Khong, Pek-Lan and Hui, Christopher Kim-Ming and Yuen, Kwok-yung and Kuo, Michael D.},
-	title = {Imaging Profile of the \{COVID\}-19 Infection: {Radiologic} Findings and Literature Review},
+	doi = {10.1148/ryct.2020200034},
+	issn = {2638-6135},
 	journal = {Radiology: Cardiothoracic Imaging},
-	volume = {2},
 	number = {1},
 	pages = {e200034},
-	year = {2020},
 	publisher = {Radiological Society of North America (RSNA)},
-	doi = {10.1148/ryct.2020200034},
 	source = {Crossref},
+	title = {Imaging Profile of the \{COVID\}-19 Infection: {Radiologic} Findings and Literature Review},
 	url = {https://doi.org/10.1148/ryct.2020200034},
-	issn = {2638-6135},
+	volume = {2},
+	year = {2020},
 	month = feb,
 }
 
 @inproceedings{orsic2019defense,
 	author = {Orsic, Marin and Kreso, Ivan and Bevandic, Petra and Segvic, Sinisa},
-	title = {In Defense of Pre-Trained {ImageNet} Architectures for Real-Time Semantic Segmentation of Road-Driving Images},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/cvpr/OrsicKBS19.bib},
 	booktitle = {2019 IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
-	pages = {12607--12616},
-	year = {2019},
 	doi = {10.1109/cvpr.2019.01289},
-	source = {Crossref},
-	url = {https://doi.org/10.1109/cvpr.2019.01289},
+	pages = {12607--12616},
 	publisher = {IEEE},
+	timestamp = {Mon, 15 Jun 2020 01:00:00 +0200},
+	title = {In Defense of Pre-Trained {ImageNet} Architectures for Real-Time Semantic Segmentation of Road-Driving Images},
+	url = {https://doi.org/10.1109/cvpr.2019.01289},
+	year = {2019},
+	source = {Crossref},
 	month = jun,
 }
 
 @inproceedings{paszke2019pytorch,
-	author = {Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer, Adam and Bradbury, James and Chanan, Gregory and Killeen, Trevor and Lin, Zeming and Gimelshein, Natalia and Antiga, Luca and others},
-	title = {{PyTorch:} {An} imperative style, high-performance deep learning library},
-	booktitle = {Advances in Neural Information Processing Systems},
+	author = {Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer, Adam and Bradbury, James and Chanan, Gregory and Killeen, Trevor and Lin, Zeming and Gimelshein, Natalia and Antiga, Luca and Desmaison, Alban and K\"opf, Andreas and Yang, Edward and DeVito, Zachary and Raison, Martin and Tejani, Alykhan and Chilamkurthy, Sasank and Steiner, Benoit and Fang, Lu and Bai, Junjie and Chintala, Soumith},
+	editor = {Wallach, Hanna M. and Larochelle, Hugo and Beygelzimer, Alina and d'Alch\'e-Buc, Florence and Fox, Emily B. and Garnett, Roman},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/nips/PaszkeGMLBCKLGA19.bib},
+	booktitle = {Advances in Neural Information Processing Systems 32: Annual Conference on Neural Information Processing Systems 2019, NeurIPS 2019, December 8-14, 2019, Vancouver, BC, Canada},
 	pages = {8024--8035},
+	timestamp = {Thu, 21 Jan 2021 00:00:00 +0100},
+	title = {{PyTorch:} {An} Imperative Style, High-Performance Deep Learning Library},
+	url = {https://proceedings.neurips.cc/paper/2019/hash/bdbca288fee7f92f2bfa9f7012727740-Abstract.html},
 	year = {2019},
 }
 
 @inproceedings{ronneberger2015u,
 	author = {Ronneberger, Olaf and Fischer, Philipp and Brox, Thomas},
-	title = {U-net: {Convolutional} networks for biomedical image segmentation},
 	booktitle = {International Conference on Medical image computing and computer-assisted intervention},
-	pages = {234--241},
-	year = {2015},
 	organization = {Springer},
+	pages = {234--241},
+	title = {U-net: {Convolutional} networks for biomedical image segmentation},
+	year = {2015},
 }
 
 @article{schneider1996calibration,
 	author = {Schneider, Uwe and Pedroni, Eros and Lomax, Antony},
-	title = {The calibration of {CT} Hounsfield units for radiotherapy treatment planning},
+	doi = {10.1088/0031-9155/41/1/009},
+	issn = {0031-9155, 1361-6560},
 	journal = {Phys. Med. Biol.},
-	volume = {41},
 	number = {1},
 	pages = {111--124},
-	year = {1996},
 	publisher = {IOP Publishing},
-	doi = {10.1088/0031-9155/41/1/009},
 	source = {Crossref},
+	title = {The calibration of {CT} Hounsfield units for radiotherapy treatment planning},
 	url = {https://doi.org/10.1088/0031-9155/41/1/009},
-	issn = {0031-9155, 1361-6560},
+	volume = {41},
+	year = {1996},
 	month = jan,
 }
 
 @article{shan2020lung,
 	author = {Shan, Fei and Gao, Yaozong and Wang, Jun and Shi, Weiya and Shi, Nannan and Han, Miaofei and Xue, Zhong and Shen, Dinggang and Shi, Yuxin},
-	title = {Abnormal lung quantification in chest {CT} images of {COVID-19} patients with deep learning and its application to severity prediction},
-	journal = {Med. Phys.},
-	year = {2021},
 	doi = {10.1002/mp.14609},
+	issn = {0094-2405, 2473-4209},
+	journal = {Med. Phys.},
 	number = {4},
+	pages = {1633--1645},
+	publisher = {Wiley},
 	source = {Crossref},
+	title = {Abnormal lung quantification in chest {CT} images of {COVID-19} patients with deep learning and its application to severity prediction},
 	url = {https://doi.org/10.1002/mp.14609},
 	volume = {48},
-	publisher = {Wiley},
-	issn = {0094-2405, 2473-4209},
-	pages = {1633--1645},
+	year = {2021},
 	month = mar,
 }
 
 @article{shi2020review,
 	author = {Shi, Feng and Wang, Jun and Shi, Jun and Wu, Ziyan and Wang, Qian and Tang, Zhenyu and He, Kelei and Shi, Yinghuan and Shen, Dinggang},
-	title = {Review of Artificial Intelligence Techniques in Imaging Data Acquisition, Segmentation, and Diagnosis for \{COVID\}-19},
-	journal = {IEEE Rev. Biomed. Eng.},
-	year = {2021},
-	publisher = {Institute of Electrical and Electronics Engineers (IEEE)},
 	doi = {10.1109/rbme.2020.2987975},
+	issn = {1937-3333, 1941-1189},
+	journal = {IEEE Rev. Biomed. Eng.},
+	pages = {4--15},
+	publisher = {Institute of Electrical and Electronics Engineers (IEEE)},
 	source = {Crossref},
+	title = {Review of Artificial Intelligence Techniques in Imaging Data Acquisition, Segmentation, and Diagnosis for \{COVID\}-19},
 	url = {https://doi.org/10.1109/rbme.2020.2987975},
 	volume = {14},
-	issn = {1937-3333, 1941-1189},
-	pages = {4--15},
+	year = {2021},
 }
 
-@article{simonyan2014very,
+@inproceedings{simonyan2014very,
 	author = {Simonyan, Karen and Zisserman, Andrew},
-	title = {Very deep convolutional networks for large-scale image recognition},
-	journal = {arXiv preprint arXiv:1409.1556},
-	year = {2014},
+	editor = {Bengio, Yoshua and LeCun, Yann},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/journals/corr/SimonyanZ14a.bib},
+	booktitle = {3rd International Conference on Learning Representations, ICLR 2015, San Diego, CA, USA, May 7-9, 2015, Conference Track Proceedings},
+	timestamp = {Fri, 29 Mar 2019 00:00:00 +0100},
+	title = {Very Deep Convolutional Networks for Large-Scale Image Recognition},
+	url = {http://arxiv.org/abs/1409.1556},
+	year = {2015},
 }
 
 @article{skourt2018lung,
 	author = {Ait Skourt, Brahim and El Hassani, Abdelhamid and Majda, Aicha},
-	title = {Lung {CT} Image Segmentation Using Deep Neural Networks},
-	journal = {Procedia Comput. Sci.},
-	volume = {127},
-	pages = {109--113},
-	year = {2018},
-	publisher = {Elsevier BV},
 	doi = {10.1016/j.procs.2018.01.104},
-	source = {Crossref},
-	url = {https://doi.org/10.1016/j.procs.2018.01.104},
 	issn = {1877-0509},
+	journal = {Procedia Comput. Sci.},
+	pages = {109--113},
+	publisher = {Elsevier BV},
+	source = {Crossref},
+	title = {Lung {CT} Image Segmentation Using Deep Neural Networks},
+	url = {https://doi.org/10.1016/j.procs.2018.01.104},
+	volume = {127},
+	year = {2018},
 }
 
 @inproceedings{szegedy2015going,
-	author = {Szegedy, Christian and Liu, Wei and Jia, Yangqing and Sermanet, Pierre and Reed, Scott and Anguelov, Dragomir and Erhan, Dumitru and Vanhoucke, Vincent and Rabinovich, Andrew},
-	title = {Going deeper with convolutions},
+	author = {Szegedy, Christian and Liu, Wei and Jia, Yangqing and Sermanet, Pierre and Reed, Scott E. and Anguelov, Dragomir and Erhan, Dumitru and Vanhoucke, Vincent and Rabinovich, Andrew},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/cvpr/SzegedyLJSRAEVR15.bib},
 	booktitle = {2015 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
-	pages = {1--9},
-	year = {2015},
 	doi = {10.1109/cvpr.2015.7298594},
-	source = {Crossref},
-	url = {https://doi.org/10.1109/cvpr.2015.7298594},
+	pages = {1--9},
 	publisher = {IEEE},
+	timestamp = {Wed, 14 Nov 2018 00:00:00 +0100},
+	title = {Going deeper with convolutions},
+	url = {https://doi.org/10.1109/cvpr.2015.7298594},
+	year = {2015},
+	source = {Crossref},
 	month = jun,
 }
 
 @inproceedings{szegedy2017inception,
 	author = {Szegedy, Christian and Vanhoucke, Vincent and Ioffe, Sergey and Shlens, Jon and Wojna, Zbigniew},
-	title = {Rethinking the Inception Architecture for Computer Vision},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/cvpr/SzegedyVISW16.bib},
 	booktitle = {2016 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
-	year = {2016},
 	doi = {10.1109/cvpr.2016.308},
-	source = {Crossref},
-	url = {https://doi.org/10.1109/cvpr.2016.308},
+	pages = {2818--2826},
 	publisher = {IEEE},
+	timestamp = {Sun, 25 Oct 2020 01:00:00 +0200},
+	title = {Rethinking the Inception Architecture for Computer Vision},
+	url = {https://doi.org/10.1109/cvpr.2016.308},
+	year = {2016},
+	source = {Crossref},
 	month = jun,
 }
 
-@article{tan2019efficientnet,
-	author = {Tan, Mingxing and Le, Quoc V},
-	title = {Efficientnet: {Rethinking} model scaling for convolutional neural networks},
-	journal = {arXiv preprint arXiv:1905.11946},
+@inproceedings{tan2019efficientnet,
+	author = {Tan, Mingxing and Le, Quoc V.},
+	editor = {Chaudhuri, Kamalika and Salakhutdinov, Ruslan},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/icml/TanL19.bib},
+	booktitle = {Proceedings of the 36th International Conference on Machine Learning, ICML 2019, 9-15 June 2019, Long Beach, California, USA},
+	pages = {6105--6114},
+	publisher = {PMLR},
+	series = {Proceedings of Machine Learning Research},
+	timestamp = {Tue, 11 Jun 2019 01:00:00 +0200},
+	title = {{EfficientNet:} {Rethinking} Model Scaling for Convolutional Neural Networks},
+	url = {http://proceedings.mlr.press/v97/tan19a.html},
+	volume = {97},
 	year = {2019},
 }
 
 @article{wang2020clinical,
 	author = {Wang, Dawei and Hu, Bo and Hu, Chang and Zhu, Fangfang and Liu, Xing and Zhang, Jing and Wang, Binbin and Xiang, Hui and Cheng, Zhenshun and Xiong, Yong and Zhao, Yan and Li, Yirong and Wang, Xinghuan and Peng, Zhiyong},
-	title = {Clinical Characteristics of 138 Hospitalized Patients With 2019 Novel {Coronavirus{\textendash}Infected} Pneumonia in Wuhan, China},
+	doi = {10.1001/jama.2020.1585},
+	issn = {0098-7484},
 	journal = {JAMA},
-	volume = {323},
 	number = {11},
 	pages = {1061},
-	year = {2020},
 	publisher = {American Medical Association (AMA)},
-	doi = {10.1001/jama.2020.1585},
 	source = {Crossref},
+	title = {Clinical Characteristics of 138 Hospitalized Patients With 2019 Novel {Coronavirus{\textendash}Infected} Pneumonia in Wuhan, China},
 	url = {https://doi.org/10.1001/jama.2020.1585},
-	issn = {0098-7484},
+	volume = {323},
+	year = {2020},
 	month = mar,
 }
 
 @article{wang2020does,
 	author = {Wang, Yixin and Zhang, Yao and Liu, Yang and Tian, Jiang and Zhong, Cheng and Shi, Zhongchao and Zhang, Yang and He, Zhiqiang},
-	title = {Does non-\{COVID\}-19 lung lesion help? investigating transferability in \{COVID\}-19 {CT} image segmentation},
-	journal = {Comput. Meth. Prog. Bio.},
-	year = {2021},
 	doi = {10.1016/j.cmpb.2021.106004},
+	issn = {0169-2607},
+	journal = {Comput. Meth. Prog. Bio.},
+	pages = {106004},
+	publisher = {Elsevier BV},
 	source = {Crossref},
+	title = {Does non-\{COVID\}-19 lung lesion help? investigating transferability in \{COVID\}-19 {CT} image segmentation},
 	url = {https://doi.org/10.1016/j.cmpb.2021.106004},
 	volume = {202},
-	publisher = {Elsevier BV},
-	issn = {0169-2607},
-	pages = {106004},
+	year = {2021},
 	month = apr,
 }
 
 @article{wang2020noise,
 	author = {Wang, Guotai and Liu, Xinglong and Li, Chaoping and Xu, Zhiyong and Ruan, Jiugen and Zhu, Haifeng and Meng, Tao and Li, Kang and Huang, Ning and Zhang, Shaoting},
-	title = {A Noise-Robust Framework for Automatic Segmentation of \{COVID\}-19 Pneumonia Lesions From {CT} Images},
-	journal = {IEEE Trans. Med. Imaging},
-	year = {2020},
-	publisher = {Institute of Electrical and Electronics Engineers (IEEE)},
 	doi = {10.1109/tmi.2020.3000314},
+	issn = {0278-0062, 1558-254X},
+	journal = {IEEE Trans. Med. Imaging},
 	number = {8},
+	pages = {2653--2663},
+	publisher = {Institute of Electrical and Electronics Engineers (IEEE)},
 	source = {Crossref},
+	title = {A Noise-Robust Framework for Automatic Segmentation of \{COVID\}-19 Pneumonia Lesions From {CT} Images},
 	url = {https://doi.org/10.1109/tmi.2020.3000314},
 	volume = {39},
-	issn = {0278-0062, 1558-254X},
-	pages = {2653--2663},
+	year = {2020},
 	month = aug,
 }
 
 @article{world2020coronavirus,
 	author = {Organization, World Health and others},
+	publisher = {World Health Organization},
 	title = {Coronavirus disease 2019 \{(COVID\}-19): {Situation} report, 72},
 	year = {2020},
-	publisher = {World Health Organization},
 }
 
 @inproceedings{xie2017aggregated,
 	author = {Xie, Saining and Girshick, Ross and Dollar, Piotr and Tu, Zhuowen and He, Kaiming},
-	title = {Aggregated Residual Transformations for Deep Neural Networks},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/cvpr/XieGDTH17.bib},
 	booktitle = {2017 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
-	pages = {1492--1500},
-	year = {2017},
 	doi = {10.1109/cvpr.2017.634},
-	source = {Crossref},
-	url = {https://doi.org/10.1109/cvpr.2017.634},
+	pages = {5987--5995},
 	publisher = {IEEE},
+	timestamp = {Tue, 14 Nov 2017 00:00:00 +0100},
+	title = {Aggregated Residual Transformations for Deep Neural Networks},
+	url = {https://doi.org/10.1109/cvpr.2017.634},
+	year = {2017},
+	source = {Crossref},
 	month = jul,
 }
 
 @article{yakubovskiy2019segmentation,
 	author = {Yakubovskiy, P},
-	title = {Segmentation models},
 	journal = {GitHub repository},
+	title = {Segmentation models},
 	year = {2019},
 }
 
 @article{yan2020covid,
 	author = {Yan, Qingsen and Wang, Bo and Gong, Dong and Luo, Chuan and Zhao, Wei and Shen, Jianhu and Ai, Jingyang and Shi, Qinfeng and Zhang, Yanning and Jin, Shuo and Zhang, Liang and You, Zheng},
-	title = {\{COVID\}-19 Chest {CT} Image Segmentation Network by Multi-Scale Fusion and Enhancement Operations},
-	journal = {\#IEEE\_J\_BD\#},
-	year = {2021},
 	doi = {10.1109/tbdata.2021.3056564},
+	issn = {2332-7790, 2372-2096},
+	journal = {\#IEEE\_J\_BD\#},
 	number = {1},
+	pages = {13--24},
+	publisher = {Institute of Electrical and Electronics Engineers (IEEE)},
 	source = {Crossref},
+	title = {\{COVID\}-19 Chest {CT} Image Segmentation Network by Multi-Scale Fusion and Enhancement Operations},
 	url = {https://doi.org/10.1109/tbdata.2021.3056564},
 	volume = {7},
-	publisher = {Institute of Electrical and Electronics Engineers (IEEE)},
-	issn = {2332-7790, 2372-2096},
-	pages = {13--24},
+	year = {2021},
 	month = mar,
 }
 
 @inproceedings{zhao2017pyramid,
 	author = {Zhao, Hengshuang and Shi, Jianping and Qi, Xiaojuan and Wang, Xiaogang and Jia, Jiaya},
-	title = {Pyramid Scene Parsing Network},
+	bibsource = {dblp computer science bibliography, https://dblp.org},
+	biburl = {https://dblp.org/rec/conf/cvpr/ZhaoSQWJ17.bib},
 	booktitle = {2017 IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
-	pages = {2881--2890},
-	year = {2017},
 	doi = {10.1109/cvpr.2017.660},
-	source = {Crossref},
-	url = {https://doi.org/10.1109/cvpr.2017.660},
+	pages = {6230--6239},
 	publisher = {IEEE},
+	timestamp = {Tue, 14 Nov 2017 00:00:00 +0100},
+	title = {Pyramid Scene Parsing Network},
+	url = {https://doi.org/10.1109/cvpr.2017.660},
+	year = {2017},
+	source = {Crossref},
 	month = jul,
 }
